Bug 386823 - Deprecation warning for KRun::runUrl
Summary: Deprecation warning for KRun::runUrl
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.40.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-13 01:31 UTC by uwestoehr
Modified: 2017-12-20 19:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-13 01:31:18 UTC
I get:

[99/357] Building CXX object src\CMakeFiles\KF5TextEditor.dir\schema\katecategorydrawer.cpp.obj
[100/357] Building CXX object src\CMakeFiles\KF5TextEditor.dir\swapfile\kateswapdiffcreator.cpp.obj
R:\build\frameworks\tier3\ktexteditor\work\ktexteditor-5.40.0\src\swapfile\kateswapdiffcreator.cpp(158): warning C4996:
'KRun::runUrl': was declared deprecated
r:\include\kf5\kiowidgets\krun.h(302): note: see declaration of 'KRun::runUrl'
Comment 1 Christoph Cullmann 2017-12-20 19:48:26 UTC
Git commit 5abb34a1fc6f5744e27651ab9041b55c0fa1b5a1 by Christoph Cullmann.
Committed on 20/12/2017 at 19:47.
Pushed by cullmann into branch 'master'.

port to non-deprecated API like already used at other place

M  +1    -1    src/swapfile/kateswapdiffcreator.cpp

https://commits.kde.org/ktexteditor/5abb34a1fc6f5744e27651ab9041b55c0fa1b5a1