port to non-deprecated API like already used at other place

BUG: 386823